--- a/md.html
+++ b/md.html
@@ -47,7 +47,7 @@
 
             <textarea class="editor" id="editor" placeholder="在这里输入Markdown内容...
 
-# 欢迎使用微信编辑器 Pro
+# 欢迎使用微信编辑器1.1.1
 
 这是一个专为**微信公众号**优化的Markdown编辑器，支持多种样式主题。
 
