--- a/md.html
+++ b/md.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>微信公众号Markdown编辑器</title>
+    <title>微信公众号 Markdown 编辑器</title>
     <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <meta name="color-scheme" content="light dark">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no,email=no,address=no">
 </head>
 <body>
     <div class="container">
@@ -14,7 +17,7 @@
         </div>
 
         <div class="style-selector">
-            <label for="themeSelect">🎨 选择样式主题：</label>
+            <label for="themeSelect">🎨 选择样式主题</label>
             <select id="themeSelect" class="style-select" onchange="changeTheme(this.value)">
                 <option value="default">经典默认</option>
                 <option value="tech">科技蓝调</option>
@@ -22,12 +25,14 @@
                 <option value="fresh">清新自然</option>
                 <option value="warm">温暖橙调</option>
                 <option value="lemon">柠檬黄</option>
+                <option value="apple">苹果风格</option>
             </select>
         </div>
 
         <div class="toolbar">
             <button class="btn btn-primary" onclick="insertText('**粗体**')">粗体</button>
             <button class="btn btn-primary" onclick="insertText('\n> 引用\n')">引用</button>
+            <button class="btn btn-secondary" onclick="undoEdit()">↩️ 撤销</button>
             <button class="btn btn-success" onclick="copyToClipboard()">📋 复制格式</button>
             <button class="btn btn-info" onclick="toggleMode()" id="toggleBtn">👀 预览效果</button>
             <button class="btn btn-warning" onclick="clearEditor()">清空</button>
@@ -45,25 +50,27 @@
                 <button class="quick-btn" onclick="insertText('---')">分割线</button>
             </div>
 
-            <textarea class="editor" id="editor" placeholder="在这里输入Markdown内容...
+            <textarea class="editor" id="editor" placeholder="在这里输入 Markdown 内容...
 
-# 欢迎使用微信编辑器1.1.1
+# 欢迎使用微信编辑器 v1.2.0
 
-这是一个专为**微信公众号**优化的Markdown编辑器，支持多种样式主题。
+这是一个专为 微信公众号 优化的 Markdown 编辑器，支持多种样式主题。
 
 ## 🎨 新增特性
 
 ### 多样式主题
-- **经典默认**：适合正式文档
-- **科技蓝调**：现代感强，适合技术文章
-- **优雅简约**：文艺气息，适合深度阅读
-- **清新自然**：活泼明快，适合生活分享
-- **温暖橙调**：温馨亲和，适合情感表达
+- 经典默认：适合正式文档
+- 科技蓝调：现代感强，适合技术文档
+- 优雅简约：文艺气息，适合深度阅读
+- 清新自然：活泼明快，适合生活分享
+- 温暖橙调：温馨亲和，适合情感表达
+- 苹果风格：系统级字体，简洁优雅
 
 ### 编辑体验优化
 - 光标位置保持，编辑不跳动
 - 实时预览渲染
 - 快捷键支持
+- 新增 撤销 按钮
 
 ## 支持的格式
 
@@ -90,7 +97,7 @@
 
 ---
 
-**选择你喜欢的主题样式，开始创作吧！** ✨"></textarea>
+选择你喜欢的主题样式，开始创作吧！"></textarea>
 
             <div class="preview-content theme-default" id="previewContent"></div>
 
@@ -102,14 +109,10 @@
         <div id="copyContent"></div>
     </div>
 
-    <div class="success-message" id="successMessage">
-        ✅ 已复制！可直接粘贴到微信编辑器
-    </div>
+    <div class="success-message" id="successMessage">✅ 已复制！可直接粘贴到微信编辑器</div>
 
     <!-- 回到顶部按钮 -->
-    <button class="back-to-top" id="backToTop" onclick="scrollToTop()">
-        ↑
-    </button>
+    <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.3.0/marked.min.js"></script>
     <script src="themes/theme-default.js"></script>
@@ -118,7 +121,9 @@
     <script src="themes/theme-fresh.js"></script>
     <script src="themes/theme-warm.js"></script>
     <script src="themes/theme-lemon.js"></script>
+    <script src="themes/theme-apple.js"></script>
     <script src="script.js"></script>
 
 </body>
 </html>
+
