--- a/md.html
+++ b/md.html
@@ -1,56 +1,57 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>微信公众号 Markdown 编辑器</title>
-    <link rel="stylesheet" type="text/css" href="styles.css"/>
-    <meta name="color-scheme" content="light dark">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="format-detection" content="telephone=no,email=no,address=no">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>微信公众号 Markdown 编辑器</title>
+  <link rel="stylesheet" type="text/css" href="styles.css"/>
+  <meta name="color-scheme" content="light dark">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="format-detection" content="telephone=no,email=no,address=no">
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>📱 微信编辑器 Pro</h1>
-            <p>移动端优化 · 多样式主题 · 微信兼容</p>
-        </div>
+  <div class="container">
+    <div class="header">
+      <h1><span class="grad">📱 微信公众号编辑器</span> <span class="badge">Pro</span></h1>
+      <div class="hero-accent" aria-hidden="true"></div>
+      <p>移动端优化 · 多样式主题 · 公众号兼容</p>
+    </div>
 
-        <div class="style-selector">
-            <label for="themeSelect">🎨 选择样式主题</label>
-            <select id="themeSelect" class="style-select" onchange="changeTheme(this.value)">
-                <option value="default">经典默认</option>
-                <option value="tech">科技蓝调</option>
-                <option value="elegant">优雅简约</option>
-                <option value="fresh">清新自然</option>
-                <option value="warm">温暖橙调</option>
-                <option value="lemon">柠檬黄</option>
-                <option value="apple">苹果风格</option>
-            </select>
-        </div>
+    <div class="style-selector">
+      <label for="themeSelect">🎨 选择样式主题</label>
+      <select id="themeSelect" class="style-select" onchange="changeTheme(this.value)">
+        <option value="default">📘 经典默认</option>
+        <option value="tech">🧪 科技蓝调</option>
+        <option value="elegant">✨ 优雅简约</option>
+        <option value="fresh">🌿 清新自然</option>
+        <option value="warm">🔶 温暖橙调</option>
+        <option value="lemon">🍋 柠檬黄</option>
+        <option value="apple">🍎 苹果风格</option>
+      </select>
+    </div>
 
-        <div class="toolbar">
-            <button class="btn btn-primary" onclick="insertText('**粗体**')">粗体</button>
-            <button class="btn btn-primary" onclick="insertText('\n> 引用\n')">引用</button>
-            <button class="btn btn-secondary" onclick="undoEdit()">↩️ 撤销</button>
-            <button class="btn btn-success" onclick="copyToClipboard()">📋 复制格式</button>
-            <button class="btn btn-info" onclick="toggleMode()" id="toggleBtn">👀 预览效果</button>
-            <button class="btn btn-warning" onclick="clearEditor()">清空</button>
-        </div>
+    <div class="toolbar">
+      <button class="btn btn-primary" onclick="insertText('**粗体**')">粗体</button>
+      <button class="btn btn-primary" onclick="insertText('\n> 引用\n')">引用</button>
+      <button class="btn btn-secondary" onclick="undoEdit()">↩️ 撤销</button>
+      <button class="btn btn-success" onclick="copyToClipboard()">📋 复制格式</button>
+      <button class="btn btn-info" onclick="toggleMode()" id="toggleBtn">👀 预览效果</button>
+      <button class="btn btn-warning" onclick="clearEditor()">清空</button>
+    </div>
 
-        <div class="content-section">
-            <div class="mode-indicator" id="modeIndicator">预览模式</div>
-            
-            <div class="quick-insert" id="quickInsert">
-                <button class="quick-btn" onclick="insertText('# ')">H1</button>
-                <button class="quick-btn" onclick="insertText('## ')">H2</button>
-                <button class="quick-btn" onclick="insertText('### ')">H3</button>
-                <button class="quick-btn" onclick="insertText('\n- ')">列表</button>
-                <button class="quick-btn" onclick="insertText('\n1. ')">数字</button>
-                <button class="quick-btn" onclick="insertText('---')">分割线</button>
-            </div>
+    <div class="content-section">
+      <div class="mode-indicator" id="modeIndicator">预览模式</div>
 
-            <textarea class="editor" id="editor" placeholder="在这里输入 Markdown 内容...
+      <div class="quick-insert" id="quickInsert">
+        <button class="quick-btn" onclick="insertText('# ')">H1</button>
+        <button class="quick-btn" onclick="insertText('## ')">H2</button>
+        <button class="quick-btn" onclick="insertText('### ')">H3</button>
+        <button class="quick-btn" onclick="insertText('\n- ')">列表</button>
+        <button class="quick-btn" onclick="insertText('\n1. ')">数字</button>
+        <button class="quick-btn" onclick="insertText('---')">分割线</button>
+      </div>
+
+      <textarea class="editor" id="editor" placeholder="在这里输入 Markdown 内容...
 
 # 欢迎使用微信编辑器 v1.2.0
 
@@ -99,31 +100,30 @@
 
 选择你喜欢的主题样式，开始创作吧！"></textarea>
 
-            <div class="preview-content theme-default" id="previewContent"></div>
+      <div class="preview-content theme-default" id="previewContent"></div>
 
-        </div>
     </div>
+  </div>
 
-    <!-- 隐藏的复制区域 -->
-    <div class="hidden-copy-area">
-        <div id="copyContent"></div>
-    </div>
+  <!-- 隐藏的复制区域 -->
+  <div class="hidden-copy-area">
+    <div id="copyContent"></div>
+  </div>
 
-    <div class="success-message" id="successMessage">✅ 已复制！可直接粘贴到微信编辑器</div>
+  <div class="success-message" id="successMessage">✅ 已复制！可直接粘贴到微信编辑器</div>
 
-    <!-- 回到顶部按钮 -->
-    <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
+  <!-- 回到顶部按钮 -->
+  <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.3.0/marked.min.js"></script>
-    <script src="themes/theme-default.js"></script>
-    <script src="themes/theme-tech.js"></script>
-    <script src="themes/theme-elegant.js"></script>
-    <script src="themes/theme-fresh.js"></script>
-    <script src="themes/theme-warm.js"></script>
-    <script src="themes/theme-lemon.js"></script>
-    <script src="themes/theme-apple.js"></script>
-    <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.3.0/marked.min.js"></script>
+  <script src="themes/theme-default.js"></script>
+  <script src="themes/theme-tech.js"></script>
+  <script src="themes/theme-elegant.js"></script>
+  <script src="themes/theme-fresh.js"></script>
+  <script src="themes/theme-warm.js"></script>
+  <script src="themes/theme-lemon.js"></script>
+  <script src="themes/theme-apple.js"></script>
+  <script src="script.js"></script>
 
 </body>
 </html>
-
