--- a/md.html
+++ b/md.html
@@ -27,6 +27,7 @@
         <option value="warm">🔶 温暖橙调</option>
         <option value="lemon">🍋 柠檬黄</option>
         <option value="apple">🍎 苹果风格</option>
+        <option value="minimalist">🧾 极致简约</option>
       </select>
     </div>
 
@@ -123,6 +124,7 @@
   <script src="themes/theme-warm.js"></script>
   <script src="themes/theme-lemon.js"></script>
   <script src="themes/theme-apple.js"></script>
+  <script src="themes/theme-minimalist.js"></script>
   <script src="script.js"></script>
 
 </body>
